table fix for overflow and webkit css3 features added, finally fixed modernizer for IE

--- a/public/stylesheets/lolita/style.css
+++ b/public/stylesheets/lolita/style.css
@@ -38,6 +38,7 @@ header nav .username {margin-right: 15px;}
 #main nav ul li.active a {
   background: #d9d9d9; 
   background: -moz-linear-gradient(left, #e1e1e1, #d5d5d5);
+  background: -webkit-linear-gradient(left, #e1e1e1, #d5d5d5);
   border: 2px solid #d5d5d5; 
   border-right: none;
   -moz-border-radius: 5px 0 0 5px;
@@ -76,11 +77,13 @@ footer {height: 50px;} /* for not leaving empty space in bottom */
 .black {
   background: #2f2f2f;
   background: -moz-linear-gradient(top, #686868, #2f2f2f);
+  background: -webkit-linear-gradient(top, #686868, #2f2f2f);
 }
 .black, a.black {color: #f1f1f1;}
 .grey {
   background: #ededed; /* for IE, Opera */
   background: -moz-linear-gradient(top, #ededed, #e2e2e2);
+  background: -webkit-linear-gradient(top, #ededed, #e2e2e2);
 }
 .grey, a.grey {color: #8f8f8f;}
 /* --------------------------------------------- */
@@ -95,6 +98,7 @@ a.create {
   display: block;
   background: #9d81f8;
   background: -moz-linear-gradient(top, #ae91eb, #9d81f8);
+  background: -webkit-linear-gradient(top, #ae91eb, #9d81f8);
   padding-right: 30px;
   line-height: 35px; 
   text-align: right;
@@ -102,20 +106,22 @@ a.create {
 }
 .create img {position: absolute; right: -20px;}
 
-table.list {width: 100%;}
-table.list td,
-table.list th {line-height: 35px; padding: 0 20px; white-space: nowrap;}
-table.list td input {vertical-align: middle;}
-table.list thead {background: #d5d5d5;}
-table.list thead th {text-align: left;}
-table.list thead th a {color: #a5a5a5;}
-table.list thead th.active a {color: #6c6c6c;} /* Style for active header */
-table.list tbody tr {border-bottom: 1px solid #e3e3e3;}
-table.list tbody tr:last-child {border-bottom: none;} /* CSS3 selector for now, may be enough */
-table.list tbody tr:hover { /* Style was for in-place editing, using now on hover for demonstration purposes */
+.list {overflow-x: auto;} /* additional html element that encloses table for horizontal overflow scrollbar if too wide */
+.list table {width: 100%;}
+.list table td,
+.list table th {line-height: 35px; padding: 0 20px; white-space: nowrap;}
+.list table td input {vertical-align: middle;}
+.list table thead {background: #d5d5d5;}
+.list table thead th {text-align: left;}
+.list table thead th a {color: #a5a5a5;}
+.list table thead th.active a {color: #6c6c6c;} /* Style for active header */
+.list table tbody tr {border-bottom: 1px solid #e3e3e3;}
+.list table tbody tr:last-child {border-bottom: none;} /* CSS3 selector for now, may be enough */
+.list table tbody tr:hover { /* Style was for in-place editing, using now on hover for demonstration purposes */
   background: #ebf9fc;
   -moz-box-shadow: inset 0px 1px 1px #ddd;
   -webkit-box-shadow: inset 0px 1px 1px #ddd;
+  box-shadow: inset 0px 1px 1px #ddd;
 } 
 
 /* --------------------------------------------- */
